Update background color in style.css

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 /* #5b7065, black */
 body {
-  background: #bed754;
+  background: #191919;
 
   font-family: "Roboto Mono", monospace;
   font-optical-sizing: auto;
